salesforce_sfdx/main/default/objects/vlocity_cmt__OrchestrationPlan__c/vlocity_cmt__OrchestrationPlan__c.object-meta.xml
<CustomObject>
    <label>Orchestration Plan</label>
    <nameField>
        <displayFormat>Plan{0000000}</displayFormat>
        <label>Orchestration Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orchestration Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>