salesforce_sfdx/main/default/objects/vlocity_cmt__OrchestrationPlan__c/fields/Otter_Is_PONR_Reached__c.field-meta.xml
<CustomField>
    <fullName>Otter_Is_PONR_Reached__c</fullName>
    <description>[Otter] Is point of no return (any of them) reached</description>
    <formula>IF(Otter_Point_of_No_Return_Tasks_Started__c&gt;0, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is point of no return (any of them) reached</inlineHelpText>
    <label>Is PONR Reached</label>
    <type>Checkbox</type>
</CustomField>