salesforce_sfdx/main/default/objects/vlocity_cmt__OrchestrationPlan__c/fields/Otter_Number_of_In_Progress_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Otter_Number_of_In_Progress_Tasks__c</fullName>
    <description>Number of tasks that are either ready for execution or already being executed</description>
    <inlineHelpText>Number of tasks that are either ready for execution or already being executed</inlineHelpText>
    <label>Number of In Progress Tasks</label>
    <summaryFilterItems>
        <field>vlocity_cmt__OrchestrationItem__c.vlocity_cmt__State__c</field>
        <operation>equals</operation>
        <value>Ready, Running</value>
    </summaryFilterItems>
    <summaryForeignKey>vlocity_cmt__OrchestrationItem__c.vlocity_cmt__OrchestrationPlanId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>