salesforce_sfdx/main/default/objects/vlocity_cmt__OrchestrationPlan__c/fields/Otter_Number_of_Processed_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Otter_Number_of_Processed_Tasks__c</fullName>
    <description>Number of processed tasks in the orchestration plan</description>
    <inlineHelpText>Number of processed tasks in the orchestration plan</inlineHelpText>
    <label>Number of Processed Tasks</label>
    <summaryFilterItems>
        <field>vlocity_cmt__OrchestrationItem__c.vlocity_cmt__State__c</field>
        <operation>equals</operation>
        <value>Completed, Amended, Canceled, Skipped, Discarded, Failed Discarded</value>
    </summaryFilterItems>
    <summaryForeignKey>vlocity_cmt__OrchestrationItem__c.vlocity_cmt__OrchestrationPlanId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>