salesforce_sfdx/main/default/objects/vlocity_cmt__OrchestrationPlan__c/fields/Otter_Number_of_Unprocessed_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Otter_Number_of_Unprocessed_Tasks__c</fullName>
    <description>Number of tasks still to be processed in the orchestration plan</description>
    <formula>Otter_Total_Number_of_Tasks__c -  Otter_Number_of_Processed_Tasks__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of tasks still to be processed in the orchestration plan</inlineHelpText>
    <label>Number of Unprocessed Tasks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>