salesforce_sfdx/main/default/objects/vlocity_cmt__OrchestrationPlan__c/fields/Otter_Order_Fulfillment_Progress__c.field-meta.xml
<CustomField>
    <fullName>Otter_Order_Fulfillment_Progress__c</fullName>
    <description>Orchestration plan completion progress based on the number of processed tasks. This value does not take into account durations of the tasks themselves</description>
    <formula>IF(Otter_Total_Number_of_Tasks__c &lt;&gt; 0,  Otter_Number_of_Processed_Tasks__c / Otter_Total_Number_of_Tasks__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Orchestration plan completion progress based on the number of processed tasks. This value does not take into account durations of the tasks themselves</inlineHelpText>
    <label>Order Fulfillment Progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>