salesforce_sfdx/main/default/objects/vlocity_cmt__OrchestrationPlan__c/fields/Otter_Plan_Execution_Started_At__c.field-meta.xml
<CustomField>
    <fullName>Otter_Plan_Execution_Started_At__c</fullName>
    <description>[Otter]</description>
    <label>Plan Execution Started At</label>
    <type>DateTime</type>
</CustomField>