salesforce_sfdx/main/default/objects/vlocity_cmt__OrchestrationPlan__c/fields/Otter_Total_Number_of_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Otter_Total_Number_of_Tasks__c</fullName>
    <description>Total number of tasks in the orchestration plan</description>
    <inlineHelpText>Total number of tasks in the orchestration plan</inlineHelpText>
    <label>Total Number of Tasks</label>
    <summaryForeignKey>vlocity_cmt__OrchestrationItem__c.vlocity_cmt__OrchestrationPlanId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>